# Cotal

./: .gitignore  .gitmodules  .npmrc  AGENTS.md  CLAUDE.md  FEEDBACK_HANDOFF.md  LICENSING.md  NOTICE  README.md  SPEC.md  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.changeset/: add-tmux-extension.md  beta-feedback-egress.md  cli-declutter.md  cli-personas-help.md  config.json  connector-core-personas-mcp.md  connector-hermes-docker-install.md  consumer-delete-grant.md  core-read-acls-self-heal.md  cotal-ai-setup.md  deleak-face-viewer.md  feedback-sender.md  graph-drop-offline-nodes.md  manager-command-server-resolution.md  manager-control-plane-hardening.md  manager-persona-acl.md  mesh-manifest-spawn.md  opencode-http-injection.md  opencode-reset-reconnect.md  opencode-transcript-mirror.md  opencode-tui-connector.md  per-agent-cwd.md  preflight-to-core.md  pty-startup-gates.md  publish-all.md  publish-v0.1.1.md  release-0-4-0.md  release-0-7-0.md  release-0-8-0.md  release-0-9-0.md  self-serve-channel-join.md  server-side-delivery-daemon.md  silent-liveness-probe.md  stack-spaces-console.md  topology-manifest.md  transcript-mirror.md
.claude/: settings.json
.claude-plugin/: marketplace.json
deploy/: README.md
docs/: DEMO.md  OVERVIEW.md  README.md  agent-frameworks.md  architecture.md  claude-code-integration.md  codex-integration.md  demos.md  examples.md  getting-started.md  hermes-integration.md  manifest.md  opencode-integration.md  protocol-view.md  spaces.md  (+5 more)
extensions/connector-hermes/: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  tool-parity.smoke.ts
extensions/connector-hermes/plugin/cotal/: __init__.py  adapter.py  bridge_client.py  hooks.py  plugin.yaml  tools.py
extensions/connector-hermes/smoke/: tool-parity.smoke.ts
extensions/connector-hermes/src/: bridge.ts  extension.ts  hermes-hooks.ts  index.ts  launch.ts  sidecar.ts  standalone.ts  tool-schema.ts
extensions/hermes-py/: package.json  pyproject.toml
extensions/hermes-py/src/: connector.ts
extensions/hermes-py/swarl_hermes/: peer.py
extensions/openai-agents-py/: package.json  pyproject.toml
extensions/openai-agents-py/src/: connector.ts
extensions/openai-agents-py/swarl_py/: __init__.py  endpoint.py  peer.py  subjects.py  types.py
(+534 files in other folders)
