# The managed launcher runs the gateway via `uv run --project <this dir> hermes gateway run`,
# so uv provisions an env that provides the `hermes` CLI. This is NOT a Python package itself
# (the plugin dir is copied into HERMES_HOME at launch) — `package = false` keeps uv from
# building it.
#
# Pin: the connector is written against the Hermes 0.16 plugin/platform API. The TS sidecar
# asserts the installed version is on that line at startup and fails loudly on a mismatch
# (no silent degrade) — keep this pin and the assertion in src/launch.ts in sync.
[project]
name = "cotal-connector-hermes"
version = "0.1.0"
description = "Run the Hermes (Nous Research) agent as a Cotal mesh peer."
requires-python = ">=3.11,<3.14"
dependencies = [
    "hermes-agent>=0.16,<0.17",
]

[tool.uv]
package = false
