[project]
name = "swarl_hermes"
version = "0.0.0"
description = "Minimal Python Swarl client + Hermes (Nous Research) mesh peer"
requires-python = ">=3.11,<3.14"
dependencies = [
    "hermes-agent>=0.16",
    "nats-py>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarl_hermes"]
