[project]
name = "swarl_py"
version = "0.0.0"
description = "Minimal Python Swarl client + OpenAI Agents SDK mesh peer"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.1",
    "nats-py>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarl_py"]
